Contrail-Latest/Applications/stream-app/templates/streama-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.7.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: streama
  name: streama
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: streama
    spec:
      containers:
      - env:
        - name: ACTIVE_PROFILE
          value: mysql
        - name: MYSQL_DB
          value: streama
        - name: MYSQL_HOST
          value: mysql
        - name: MYSQL_PASSWORD
          value: password
        - name: MYSQL_PORT
          value: "3306"
        - name: MYSQL_USER
          value: streama
        image: fashaikh7/streama-server:latest
        name: streama
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
